workload/apps/adguard-home/manifests/service-dns-udp.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: adguard-dns-udp
  namespace: adguard
spec:
  selector:
    app.kubernetes.io/name: adguard
  ports:
    - protocol: UDP
      port: 53
      targetPort: dns-udp
      name: dns-udp
  type: LoadBalancer
  externalTrafficPolicy: Local
